--- a/index.html
+++ b/index.html
@@ -46,11 +46,26 @@
         allowing you to play, render, and convert unsupported formats directly in the browser—no plugins required.</p>
 
     <div class="demo-section">
+        <h2>Some of use cases :</h2>
         <ul>
             <li><a href="libjxl/">Display JPEG XL images using the <code>&lt;img&gt;</code> tag</a></li>
             <li><a href="liba52/">Play Dolby AC-3 audio using the <code>&lt;audio&gt;</code> tag</a></li>
             <li><a href="theora/">Render OGG/Theora video using the <code>&lt;canvas&gt;</code> tag</a></li>
             <li><a href="webcodecs/">WebCodecs API Integration via Decoding Filter Pipeline </a></li>
+        </ul>
+
+        <h2>Benchmarks :</h2>
+        <ul>
+            <li><a href="img_bench/">Native versus Wasm-based Image decoding</a></li>
+            <li><a href="video_bench/">Native versus Wasm-based Video decoding</a></li>
+        </ul>
+
+
+        <h2>Some integration examples :</h2>
+        <ul>
+            <li><a href="MutationObserver/">Mutation observer demo</a></li>
+            <li><a href="ServiceWorker/">Service worker demo</a></li>
+        </ul>
     </div>
 
     <p>The sample files are downloaded in their entirety, please be patient, especially if you have a slow connection.
