--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
 
 
-        <h2>Some integration examples :</h2>
+        <h2>Some other integration examples :</h2>
         <ul>
             <li><a href="MutationObserver/">Mutation observer demo</a></li>
             <li><a href="ServiceWorker/">Service worker demo</a></li>
