--- a/libjxl/index.html
+++ b/libjxl/index.html
@@ -63,10 +63,10 @@
     <p>We decode a jxl file <a
             href="https://jpegxl.info/images/zoltan-tasi-CLJeQCr2F_A-unsplash.jxl">zoltan-tasi-CLJeQCr2F_A-unsplash.jxl</a>
         using the <em>universal</em> img tag : </p>
-    <pre><code>&lt;img is="universal-img"
+    <pre><code>&lt;img is="<a href="https://github.com/Bevara/player">universal-img</a>"
      src="../test_sequences/zoltan-tasi-CLJeQCr2F_A-unsplash.jxl"
-     using="solver_1"
-     with="libjxl_1"&gt;
+     using="<a href="https://github.com/Bevara/solver">solver_1</a>"
+     with="<a href="https://github.com/Bevara/libjxl">libjxl_1</a>"&gt;
 &lt;/img&gt;
 </code></pre>
 
