--- a/theora/index.html
+++ b/theora/index.html
@@ -61,9 +61,7 @@
         theora video stream and a vorbis audio stream
         using the <em>universal</em> canvas tag : </p>
 
-    <pre><code>&lt;canvas is="universal-canvas_1" data-url="../test_sequences/trailer_1080p.ogg" using="solver_1"
-        with="ogg_1;vorbis_1;theora_1" &gt;
-        &lt; /canvas &gt;
+    <pre><code>&lt;canvas is="universal-canvas_1" data-url="../test_sequences/trailer_1080p.ogg" using="solver_1" with="ogg_1;vorbis_1;theora_1"&gt; &lt;/canvas &gt;
 </code></pre>
 
     <p>
