--- a/liba52/index.html
+++ b/liba52/index.html
@@ -61,9 +61,8 @@
   <p>We decode the Dolby AC-3 audio <a
             href="https://samples.ffmpeg.org/A-codecs/AC3/Canyon-5.1-48khz-448kbit.ac3">Canyon-5.1-48khz-448kbit.ac3</a>
         using the <em>universal</em> audio tag : </p>
-    <pre><code>&lt; audio is="universal-audio_1" src="../test_sequences/Canyon-5.1-48khz-448kbit.ac3" using="solver_1"
-        with="liba52_1" controls &gt;
-        &lt; /audio &gt;
+    <pre><code>&lt;audio is="<a href="https://github.com/Bevara/player">universal-audio_1</a>" src="../test_sequences/Canyon-5.1-48khz-448kbit.ac3" using="<a href="https://github.com/Bevara/solver">solver_1</a>"
+        with="<a href="https://github.com/Bevara/liba52">liba52_1</a>" controls&gt; &lt;/audio&gt;
 </code></pre>
 
     <p>
