--- a/theora/index.html
+++ b/theora/index.html
@@ -61,7 +61,7 @@
         theora video stream and a vorbis audio stream
         using the <em>universal</em> canvas tag : </p>
 
-    <pre><code>&lt;canvas is="universal-canvas_1" data-url="../test_sequences/trailer_1080p.ogg" using="solver_1" with="ogg_1;vorbis_1;theora_1"&gt; &lt;/canvas &gt;
+    <pre><code>&lt;canvas is="<a href="https://github.com/Bevara/player">universal-canvas_1</a>" data-url="../test_sequences/trailer_1080p.ogg" using="<a href="https://github.com/Bevara/solver">solver_1</a>" with="<a href="https://github.com/Bevara/ogg">ogg_1</a>;<a href="https://github.com/Bevara/vorbis">vorbis_1</a>;<a href="https://github.com/Bevara/theora" >theora_1</a>"&gt; &lt;/canvas&gt;
 </code></pre>
 
     <p>
