--- a/webcodecs/index.html
+++ b/webcodecs/index.html
@@ -67,8 +67,8 @@
         theora video stream and a vorbis audio stream
         using the <em>universal</em> video tag : </p>
 
-        <pre><code>&lt;video is="universal-video_1" src="../test_sequences/trailer_1080p.ogg" using="solver_1"
-        with="ogg_1;vorbis_1;theora_1;isobmff_1" use-webcodecs controls &gt; &lt; /video &gt; </code></pre>
+        <pre><code>&lt;video is="<a href="https://github.com/Bevara/player">universal-video_1</a>" src="../test_sequences/trailer_1080p.ogg" using="<a href="https://github.com/Bevara/solver">solver_1</a>"
+        with="<a href="https://github.com/Bevara/ogg">ogg_1</a>;<a href="https://github.com/Bevara/vorbis">vorbis_1</a>;<a href="https://github.com/Bevara/theora">theora_1</a>;<a href="https://github.com/Bevara/isobmff">isobmff_1</a>" use-webcodecs controls &gt; &lt; /video &gt; </code></pre>
 
     <p>
      In most browsers, WebCodecs support is experimental or unavailable. 
