--- a/video_bench/index.html
+++ b/video_bench/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>WebAssembly pipeline vs Native Video decoding Benchmark</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <script src="../scripts/universal-canvas_1.js"></script>
     <style>
         body {
@@ -63,8 +64,8 @@
         theora video stream and a vorbis audio stream
         using the <em>universal</em> canvas tag : </p>
 
-    <pre><code>&lt;canvas is="universal-canvas_1" data-url="../test_sequences/trailer_1080p.ogg" using="solver_1"
-        with="ogg_1;vorbis_1;theora_1" &gt; &lt; /canvas &gt;</code></pre>
+    <pre><code>&lt;canvas is="<a href="https://github.com/Bevara/player">universal-canvas_1</a>" data-url="../test_sequences/trailer_1080p.ogg" using="<a href="https://github.com/Bevara/solver">solver_1</a>"
+        with="<a href="https://github.com/Bevara/ogg">ogg_1</a>;<a href="https://github.com/Bevara/vorbis">vorbis_1</a>;<a href="https://github.com/Bevara/theora" >theora_1</a>" &gt; &lt;/canvas&gt;</code></pre>
 
     <canvas is="universal-canvas_1" data-url="../test_sequences/trailer_1080p.ogg" using="solver_with_sdl_1" with="ogg_1;vorbis_1;theora_1" vbench noloop report print="stats_wasm" printErr="stats_wasm">
 
