--- a/MutationObserver/index.html
+++ b/MutationObserver/index.html
@@ -3,6 +3,7 @@
 <head>
   <head>
     <title>Mutation observer demo</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <style>
         body {
             font-family: system-ui, sans-serif;
