--- a/img_bench/index.html
+++ b/img_bench/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wasm pipeline vs Browser native decoding Benchmark on JXL images</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <style>
         body {
             font-family: system-ui, sans-serif;
