--- a/liba52/index.html
+++ b/liba52/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Play Dolby AC-3 audio</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <style>
         body {
             font-family: system-ui, sans-serif;
