--- a/theora/index.html
+++ b/theora/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Render OGG/Theora video</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <style>
         body {
             font-family: system-ui, sans-serif;
