--- a/theora_bench/index.html
+++ b/theora_bench/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Ogg theora demo</title>
+        <link rel="icon" type="image/x-icon" href="../favicon.ico">
         <style>
             table {
               width: 300px;
@@ -28,8 +29,8 @@
     using the <em>universal</em> canvas tag : </p>
 
     <p>
-        &lt;canvas is="universal-canvas_1" data-url="../test_sequences/trailer_1080p.ogg" using="solver_1" with="ogg_1;vorbis_1;theora_1" &gt;
-        &lt; /canvas &gt;
+        &lt;canvas is="<a href="https://github.com/Bevara/player">universal-canvas_1</a>" data-url="../test_sequences/trailer_1080p.ogg" using="<a href="https://github.com/Bevara/solver">solver_1</a>" with="<a href="https://github.com/Bevara/ogg">ogg_1</a>;<a href="https://github.com/Bevara/vorbis">vorbis_1</a>;<a href="https://github.com/Bevara/theora" >theora_1</a>" &gt;
+        &lt;/canvas&gt;
     </p>
     <p>
         It has been tested with Google Chrome Version 134.0.6998.166 (Official build) (arm64), Firefox 137.0 (aarch64) and Safari Version 18.3.1 (20620.2.4.11.6). On the day of publication, this format is not natively supported by Firefox, Chrome or Safari.
