--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a href="libjxl/">Display JPEG XL images using the <code>&lt;img&gt;</code> tag</a></li>
             <li><a href="liba52/">Play Dolby AC-3 audio using the <code>&lt;audio&gt;</code> tag</a></li>
             <li><a href="theora/">Render OGG/Theora video using the <code>&lt;canvas&gt;</code> tag</a></li>
-            <li><a href="webcodecs/">WebCodecs API Integration via Decoding Filter Pipeline </a></li>
+            <li><a href="webcodecs/">WebCodecs API Integration using the <code>&lt;video&gt;</code> tag </a></li>
         </ul>
 
         <h2>Benchmarks :</h2>
