--- a/webcodecs/index.html
+++ b/webcodecs/index.html
@@ -58,9 +58,20 @@
     then leverages the <code>VideoEncoder</code> and <code>AudioEncoder</code> from WebCodecs (if available) to re-encode streams
     into MP4 compliant format using <code>mp4mx</code>.</p>
 
-    <video is="universal-video_1" src="../test_sequences/trailer_1080p.ogg" using="solver_with_webcodecs_1" with="ogg_1;vorbis_1;theora_1;isobmff_1" use-webcodec noloop graph controls
-  >
-</video>
+    <div style="display: none;" id="result">
+       <video width="900" is="universal-video_1" src="../test_sequences/trailer_1080p.ogg" using="solver_with_webcodecs_1" with="ogg_1;vorbis_1;theora_1;isobmff_1" use-webcodec noloop graph controls>
+        </video>
+    </div>
+
+    <div id="progress">
+        <label for="transcoding">Transcoding in progress:</label>
+        <progress id="transcoding"> </progress>
+    </div>
+
+    <p>
+     In most browsers, WebCodecs support is experimental or unavailable. 
+     This demo has been tested with Google Chrome Version 134.0.6998.166 (Official build) (arm64).
+    </p>
 
     <h2>Code snippet</h2>
     <p>We decode the ogg file <a
@@ -69,12 +80,7 @@
         using the <em>universal</em> video tag : </p>
 
         <pre><code>&lt;video is="<a href="https://github.com/Bevara/player">universal-video_1</a>" src="../test_sequences/trailer_1080p.ogg" using="<a href="https://github.com/Bevara/solver">solver_1</a>"
-        with="<a href="https://github.com/Bevara/ogg">ogg_1</a>;<a href="https://github.com/Bevara/vorbis">vorbis_1</a>;<a href="https://github.com/Bevara/theora">theora_1</a>;<a href="https://github.com/Bevara/isobmff">isobmff_1</a>" use-webcodecs controls &gt; &lt; /video &gt; </code></pre>
-
-    <p>
-     In most browsers, WebCodecs support is experimental or unavailable. 
-     This demo has been tested with Google Chrome Version 134.0.6998.166 (Official build) (arm64).
-    </p>
+        with="<a href="https://github.com/Bevara/ogg">ogg_1</a>;<a href="https://github.com/Bevara/vorbis">vorbis_1</a>;<a href="https://github.com/Bevara/theora">theora_1</a>;<a href="https://github.com/Bevara/isobmff">isobmff_1</a>" use-webcodecs controls&gt; &lt;/video&gt; </code></pre>
 
     <h2> Specifications : </h2>
 
@@ -157,6 +163,23 @@
     </table>
 
     <script src="../scripts/universal-video_1.js"></script>
+
+    <script>
+            const video = document.querySelector('video');
+            const progress = document.getElementById('progress');
+            const result = document.getElementById('result');
+
+            const observer = new MutationObserver((mutationsList) => {
+                for (const mutation of mutationsList) {
+                    if (mutation.type === 'attributes' && mutation.attributeName === 'src') {
+                        progress.style.visibility ="hidden";
+                        result.style.display ="block";
+                    }
+                }
+            });
+
+            observer.observe(video, { attributes: true });
+    </script>
 </body>
 
 </html>
