Links to the official page

--- a/MutationObserver/index.html
+++ b/MutationObserver/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
   <head>
-    <title>Mutation observer demo</title>
+    <title>MutationObserver</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <style>
         body {
             font-family: system-ui, sans-serif;
             line-height: 1.6;
-            max-width: 900px;
             margin: 0 auto;
             padding: 2rem;
             background: #f9f9f9;
@@ -84,9 +83,7 @@ using conventional, img, audio and canvas tag : </p>
   </code></pre>
 
 </p>
-<p>
-It has been tested with Google Chrome Version 134.0.6998.166 (Official build) (arm64), Firefox 137.0 (aarch64) and Safari Version 18.3.1 (20620.2.4.11.6).
-</p>
+
   <h1> JXL image preview : </h1>
   <img src="../test_sequences/zoltan-tasi-CLJeQCr2F_A-unsplash.jxl" use-worker using="solver_with_sdl_1" with="libjxl_1">
   <h1> A52 audio preview : </h1>
