--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
 
         <h2>Some other integration examples :</h2>
         <ul>
-            <li><a href="MutationObserver/">Mutation observer demo</a></li>
-            <li><a href="ServiceWorker/">Service worker demo</a></li>
+            <li><a href="MutationObserver/">Using filter pipelines with MutationObserver</a></li>
+            <li><a href="ServiceWorker/">Embedding filter pipelines within MP4 container</a></li>
         </ul>
     </div>
 
-    <p>The sample files are downloaded in their entirety, please be patient, especially if you have a slow connection.
+    <p>The sample files and formats have been selected because they are license-free to use. All demos are downloaded in their entirety, please be patient, especially if you have a slow connection.
     </p>
+    <p>For further details on these demos, please consult our <a href="https://bevara.com/">official website</a> and the <a href="https://bevara.com/documentation/">accompanying documentation</a>. </p>
 
 </body>
 
