--- a/webcodecs/index.html
+++ b/webcodecs/index.html
@@ -70,7 +70,7 @@
 
     <p>
      In most browsers, WebCodecs support is experimental or unavailable. 
-     This demo has been tested with Google Chrome Version 134.0.6998.166 (Official build) (arm64).
+     This demo works best on Google Chrome starting from version 94.
     </p>
 
     <h2>Code snippet</h2>
