--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>Some other integration examples :</h2>
         <ul>
             <li><a href="MutationObserver/">Using filter pipelines with MutationObserver</a></li>
-            <li><a href="ServiceWorker/">Embedding filter pipelines within MP4 container</a></li>
+            <li><a href="ServiceWorker/">Embedding filter pipelines within containers</a></li>
         </ul>
     </div>
 
