--- a/ServiceWorker/content.html
+++ b/ServiceWorker/content.html
@@ -53,11 +53,19 @@
 <body>
     <a href="javascript:history.back()">&larr; Back</a>
     <h1> MP4 Demo </h1>
+
+    <p>
+      This demo is using an MP4 file that has been generated with MP4Box. It includes theora video and ogg audio, and a webpage to decode the video. 
+    </p>
     <p>This page is embedded in the MP4 and opened by the service worker.</p>
 
     <p>In this demo, we decode the mp4 file <a
         href=trailer_1080p.mp4">trailer_1080p.mp4</a>
     using the <em>universal</em> canvas tag : </p>
+
+    <p>
+      This Service Worker intercepts requests to resources in its scope, checks if the response is an MP4 file. If so, it parses it and determines if there is HTML content in the MP4 file (stored as a primary item in a 'meta' box whose handler is 'html'). If so, the Service Worker forwards first the HTML content to the browser. All further requests made by the browser (because referenced from the HTML page) will be checked by the Service Worker to see if the resource is in the MP4 file. The MP4 file acts as a package for resources associated to the MP4 file.
+    </p>
 
     <p>
         &lt;canvas is="universal-canvas_1" data-url="trailer_1080p.mp4" using="solver_with_sdl_1" with="isobmff_1;vorbis_1;theora_1" &gt;
