--- a/ServiceWorker/index.html
+++ b/ServiceWorker/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Service Worker demo</title>
+    <title>ServiceWorker</title>
 <style>
         body {
             font-family: system-ui, sans-serif;
@@ -55,29 +55,19 @@
 
   <body>
     <a href="javascript:history.back()">&larr; Back</a>
-    <h1>Service Worker demo</h1>
+    <h1>Embedding filter pipelines within containers</h1>
 
     <p>
       This page demonstrates the use of Service Workers for decoding MP4 files containing non-standard or unsupported format on browser. It is based on <a href="http://github.com/gpac/mp4box.js">MP4Box.js</a> and extended <a href="https://gpac.github.io/mp4box-sw/">its demo</a>  to enhance support of browser formats. 
     </p>
-    <p>
-      This demo is using an MP4 file that has been generated with MP4Box. It includes theora video and ogg audio, and a webpage to decode the video. 
-    </p>
-    <p>
-     It registers a Service Worker for the scope './'. You can check the registration using <a href="chrome://serviceworker-internals/">chrome://serviceworker-internals/</a> on Chrome, <a href="about:serviceworkers">about:serviceworkers</a> on Firefox and using inspector on Safari.
-    </p>
+    <p>Example contents:</p>
+    <ul>
+    <li><a href="trailer_1080p.mp4">Big Buck Bunny trailer with theora video and ogg audio</a></li>
+    </ul>
+
     <div class="output">
       <p>Service worker registration: <strong id="status"></strong></p>
     </div>
-
-    <p>
-      This Service Worker intercepts requests to resources in its scope, checks if the response is an MP4 file. If so, it parses it and determines if there is HTML content in the MP4 file (stored as a primary item in a 'meta' box whose handler is 'html'). If so, the Service Worker forwards first the HTML content to the browser. All further requests made by the browser (because referenced from the HTML page) will be checked by the Service Worker to see if the resource is in the MP4 file. The MP4 file acts as a package for resources associated to the MP4 file.
-    </p>
-
-    <p>Example videos:</p>
-    <ul>
-    <li><a href="trailer_1080p.mp4">Big Buck Bunny</a></li>
-    </ul>
 
   <script type="application/ecmascript">
   if ('serviceWorker' in navigator) {
