--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
         allowing you to play, render, and convert unsupported formats directly in the browser—no plugins required.</p>
 
     <div class="demo-section">
-        <h2>Some of use cases :</h2>
+        <h2>Universal tags demo :</h2>
         <ul>
             <li><a href="libjxl/">Display JPEG XL images using the <code>&lt;img&gt;</code> tag</a></li>
             <li><a href="liba52/">Play Dolby AC-3 audio using the <code>&lt;audio&gt;</code> tag</a></li>
             <li><a href="theora/">Render OGG/Theora video using the <code>&lt;canvas&gt;</code> tag</a></li>
             <li><a href="webcodecs/">WebCodecs API Integration using the <code>&lt;video&gt;</code> tag </a></li>
+        </ul>
+        
+        <h2>Open source tools :</h2>
+        <ul>
+            <li><a href="sandbox/">Bevara Access : An easy-to-use tool based on Bevara open-source libraries to create a decoding and presentation pipeline. </a></li>
         </ul>
 
         <h2>Benchmarks :</h2>
