--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <h2>Open source tools :</h2>
         <ul>
-            <li><a href="sandbox/">Bevara Access : An easy-to-use tool based on Bevara open-source libraries to create a decoding and presentation pipeline. </a></li>
+            <li><a href="sandbox/">Bevara Access : An easy-to-use tool to create a decoding and presentation pipeline. </a></li>
         </ul>
 
         <h2>Benchmarks :</h2>
