Clean up test sequence

--- a/ServiceWorker/index.html
+++ b/ServiceWorker/index.html
@@ -63,6 +63,7 @@
     <p>Example contents:</p>
     <ul>
     <li><a href="trailer_1080p.mp4">Big Buck Bunny trailer with theora video and ogg audio</a></li>
+    <li><a href="NBA_score_table_2_hd.mp4">Streaming of VR/360 content</a></li>
     </ul>
 
     <div class="output">
